--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,11 @@ buildscript {
         google()  // Google's Maven repository
         maven { url 'https://jitpack.io' }
 
-
     }
     dependencies {
         // Add this line
         classpath 'com.google.gms:google-services:4.3.13'
+        classpath("com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin:2.0.1")
 
     }
 }
@@ -21,8 +21,7 @@ buildscript {
 plugins {
     id 'com.android.application' version '7.2.1' apply false
     id 'com.android.library' version '7.2.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
-    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin' version '2.0.1' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
 
 }
 
