--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -22,9 +23,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".ParticipantInfoActivity"
-            android:exported="false" />
         <activity
             android:name=".RecyclerActivity"
             android:exported="false" />
@@ -53,7 +51,8 @@
         <activity
             android:name=".DashboardActivity"
             android:exported="true"
-            android:theme="@style/AppTheme.NoActionBar">
+            >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -80,7 +79,9 @@
             android:exported="false" />
         <activity
             android:name=".SignInActivity"
-            android:exported="true" />
+            android:exported="true">
+
+        </activity>
         <activity
             android:name=".SignUpActivity"
             android:exported="true" />
